--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@google-cloud/secret-manager": "^3.1.0",
     "@google-cloud/storage": "^5.0.1",
     "@pathcheck/safeplaces-server": "0.0.13",
-    "@pathcheck/data-layer": "0.1.4",
+    "@marshall_mccoy/data-layer": "1.0.5",
     "adm-zip": "^0.4.14",
     "ajv": "^6.12.2",
     "atob": "^2.1.2",
@@ -41,8 +41,7 @@
     "debug": "~2.6.9",
     "google-auth-library": "^6.0.2",
     "jsonwebtoken": "^8.5.1",
-    "moment": "~2.19.3",
-    "ngeohash": "^0.6.3"
+    "moment": "~2.19.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
